# PUA-PFN

./: .gitignore  GPU_TROUBLESHOOTING.md  MIGRATION_SUMMARY.md  PROJECT_COMPLETION.md  QUICKREF.py  README_CPFN.md  START_HERE.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  config.json  curriculum_results.json  main.ipynb  main.py  pyproject.toml
cpfn/: __init__.py
cpfn/data/: __init__.py  scm.py
cpfn/evaluation/: __init__.py  evaluator.py
cpfn/models/: __init__.py  bar_distribution.py  blocks.py  causal_gate.py  embedding.py  transformer.py
cpfn/training/: __init__.py  trainer.py
cpfn/utils/: __init__.py  config.py  device.py
scripts/: curriculum_train.py  evaluate.py  test.py  train.py  train_gpu_safe.py
